test/tests/stages/8_loops/valid/extra_credit/switch_break.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[39]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(a)
  =
  const int(5)
  ;
  switch
  (
  identifier(a)
  )
  {
  case
  const int(5)
  :
  identifier(a)
  =
  const int(10)
  ;
  break
  ;
  case
  const int(6)
  :
  identifier(a)
  =
  const int(0)
  ;
  break
  ;
  }
  return
  identifier(a)
  ;
  }
