test/tests/stages/8_loops/invalid_semantics/extra_credit/duplicate_label_in_default.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[36]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(a)
  =
  const int(1)
  ;
  identifier(label)
  :
  switch
  (
  identifier(a)
  )
  {
  case
  const int(1)
  :
  return
  const int(0)
  ;
  default
  :
  identifier(label)
  :
  return
  const int(1)
  ;
  }
  return
  const int(0)
  ;
  }
